--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Aug 19 00:47:35 BST 2011
-app.grails.version=1.3.7
+#Thu Sep 15 22:55:39 BST 2011
+app.grails.version=2.0.0.M1
 app.name=oauth-plugin
 app.version=0.13
 plugins.hibernate=1.3.7
